@@ -1,5 +1,9 @@
 breeze-icons (4:5.28.0-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Enable the RCC icon resources:
+    - pass -DBINARY_ICONS_RESOURCE=ON to cmake to explicitly enable them
+    - add a new breeze-icon-theme-rcc binary for *.rcc files
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 24 Jun 2017 12:17:09 +0200
 
